web/css/betterrecipes.css
/* ... */
#recipe-detail .images {
  width:320px;
  float:left;
  margin:0 20px 20px 0;
}
#recipe-detail .images p {
  width:100%;
  text-align:center;
  margin-top:10px;
}
#recipe-detail .recipe-meta {
  float:left;
  width:320px;
  position: relative;
}
#recipe-detail .recipe-meta #activityRecipeDetailContainer { position: absolute; left: 0; top: 190px; }
#recipe-detail .recipe-meta #activityRecipeDetailContainer p { font-size: 13px; margin-bottom: 5px; }
#recipe-detail .recipe-meta #activityRecipeDetailContainer ul li { float: left; display: inline; margin-right: 5px; width: 30px; height: 30px; }
#recipe-detail .recipe-meta #activityRecipeDetailContainer ul li a { width: 100%; height: 30px;  overflow: hidden; }
#recipe-detail .recipe-meta #activityRecipeDetailContainer ul li img { display: block; width: 100%; height: auto; }

.main-image {
  width:300px;
  /*  height:205px;*/
  overflow:hidden;
  /*border:#FFF solid 10px;*/
  -moz-box-shadow: 0px 0px 4px #888;
  -webkit-box-shadow: 0px 0px 4px #888;
  box-shadow: 0px 0px 4px #888;
  *background:none;
  *padding:0;
  *border:none;
}
.main-image img {
  width:300px;
  height:auto;
  display:block;
}
#public-profile .main-image {
  width:150px;
}
#public-profile .main-image img {
  width:150px;
}
#recipe-detail .images ul {
  margin-top:20px;
}
#recipe-detail .images ul li.last a img {
  margin-left:5px;
}
#recipe-detail .images ul li a span {
  height:100px;
  line-height:64px;
  display:block;
  float:left;
  width:47px;
  text-align:left;
}
#recipe-detail .images ul li.last a span {
  text-align:right;
  margin-bottom:5px;
}
#recipe-detail .images ul li a img {
  width:100px;
  height:auto;
  float:left;
}
#recipe-detail .cta-addaphoto {
  background:url(/img/bg-btn-gray-206x31.jpg) no-repeat top left;
  height:31px;
  line-height:31px;
  width:205px;
  text-align:center;
  margin:0 auto;
  font-size:18px;
  display:block;
  clear:both;
}
#recipe-detail .recipe-meta .recipe-options {
  color:#660066;
  height:22px;
  line-height:22px;
  margin-bottom:10px;
}
#recipe-detail .recipe-meta .recipe-options > li {
  margin-right:10px;
}
#recipe-detail .recipe-meta ul .last {
  margin-right:0;
}
#recipe-detail .recipe-meta .recipe-options > li > a {
  background:url(/img/bg-btn-gray-72x22.jpg) no-repeat center;
  height:22px;
  width:72px;
  line-height:22px;
  text-align:center;
  display:block;
  color:#660066;
}
#recipe-detail .recipe-meta .recipe-options .share {
  background:url(/img/bg-btn-gray-86x22.jpg) no-repeat top left;
  width:76px;
  height:22px;
  line-height:22px;
  padding:0 5px;
  color:#660066;
}
#recipe-detail .recipe-meta .recipe-options li ul {
  margin-top:3px;
}
#recipe-detail .recipe-meta iframe {
  float:left;
}
#recipe-detail .recipe-meta .rating,
#recipe-comments .rating,
#subcat-recipes .rating {
  width:168px;
  background:url(/img/bg-rating-empty.png) no-repeat top right;
  margin:0 15px 10px 0;
  position:relative;
}
#recipe-comments .rating {
  margin-top:5px;
}
#recipe-detail .recipe-meta .rating p span,
#recipe-comments .rating p span,
#subcat-recipes .rating p span {
  background:url(/img/bg-rating-full.png) no-repeat top left;
  width:26px;
  height:20px;
  display:block;
  position:absolute;
  top:0;
  left:80px;
}
#recipe-detail .recipe-meta .addrate {
  position: absolute;
  top:  0; 
  left: 210px;
  background: url('/img/comment_bubble.png') 0 0 no-repeat;
  width: 150px;
  height: 26px;
}
#recipe-detail .recipe-meta .addrate a {
  display: block;
  margin-left: 24px;
  color: #666666;
}
#recipe-detail .recipe-meta .author-meta {
  font-size:11px;
  color:#666;
  float:left;
  width:160px;
  margin:0 0 20px 0;
}
#recipe-detail .recipe-meta .author-meta.first {
  margin-right:17px;
}
#recipe-detail .recipe-meta .author-meta li {
  margin:0;
}
#recipe-detail .meal-info {
  clear:both;
  width:100%;
  background-color:#efe5ef;
  color:#660066;
  font-size:14px;
  font-weight:bold;
  padding:0 0 0 10px;
  margin:0 0 20px 0;
  overflow:hidden;
}
#recipe-detail .meal-info li {
  margin:10px 10px 10px 0;
  padding:0 10px 0 0;
  border-right:#660066 solid 2px;
  text-align:center;
  text-transform:uppercase;
}
#recipe-detail .meal-info li:last-child,
#recipe-detail .meal-info li.last {
  padding:0;
  margin:10px 0;
  border:none;	
}
#recipe-detail .love {
  background:url(/img/img-heart.png) no-repeat left center;
  padding-left:20px;
  clear:both;
}
#recipe-detail .love a {
  background:url(/img/bg-btn-purple-162x31.png) no-repeat top left;
  height:31px;
  line-height:31px;
  width:162px;
  text-align:center;
  color:#FFF;
  display:block;
  float:right;	
}
#recipe-comments {
  position:relative;
  clear: both;
}
#recipe-comments .title {
  width:50%;
}
#recipe-comments .cta-comments {
  position:absolute;
  top:0px;
  right:0;
}
#recipe-comments .cta-comments li a {
  width:136px;
}
#recipe-comments .comments {
  clear:both;
  margin-top:20px;
}
#recipe-comments .comments li {
  clear:both;
}
#recipe-comments .comments li p {
  margin-left:120px;
}
#recipe-comments .comments li p.fs11,
#discussions-detail-list #recipe-comments.replies-list .comments li p.fs11 {
  clear:both;
  padding-top:20px;
}
#discussions-detail-list #recipe-comments .comments li p.fs11,
#dailyDish #recipe-comments .comments li p.fs11 {
  clear:none;
  padding-top:20px;
}
#recipe-comments .comments li .hornav {
  margin-left:110px;
}
#recipe-comments .comments li .hornav li {
  clear:none;
  color:#660066;
  margin-bottom:20px;
}
#recipe-comments .comments li .hornav li.last {
  float:right;
}
#recipe-comments .comments li img {
  float: left;
  padding:0;
  margin:0 0 20px;
}
#polls #recipe-comments {
  border:none;
  padding:0;
  margin:20px 0 0 0;
}
#recipe-comments form,
#my-raves form {
  width:100%;
  clear:both;
  overflow:hidden;
  padding-bottom:10px;
}
#recipe-comments form p.title,
#my-raves form p.title {
  font-size:13px;
}
/* ... */

